--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,16 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+          packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+      }
 }
 
 dependencies {
@@ -28,12 +38,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'org.bytedeco:javacv-platform:1.5.2'
-    compile group: 'net.dongliu', name: 'requests', version: '5.0.7'
+
+
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compile group: 'com.google.guava', name: 'guava', version: '24.1-jre'
     compile('com.googlecode.json-simple:json-simple:1.1.1') {
         exclude group: 'org.hamcrest', module: 'hamcrest-core'
     }
+    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2'
+
     compile group: 'commons-codec', name: 'commons-codec', version: '1.13'
     implementation 'one.util:streamex:0.7.0'
 }
