--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     lintOptions {
         abortOnError false
     }
@@ -43,9 +44,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    compile group: 'org.bytedeco', name: 'javacv-platform', version: '1.5.2'
+    compile group: 'org.bytedeco', name: 'javacv-platform', version: '1.4.4'
 
-
+    compile group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: '4.0.1-1.4.4',classifier: 'android-arm'
+    compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '4.1-1.4.4',classifier: 'android-arm'
+    compile group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: '4.0.1-1.4.4',classifier: 'android-x86'
+    compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '4.1-1.4.4',classifier: 'android-x86'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compile group: 'com.google.guava', name: 'guava', version: '24.1-jre'
     compile('com.googlecode.json-simple:json-simple:1.1.1') {
