--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             multiDexEnabled = true
 
@@ -27,7 +27,7 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
-          packagingOptions {
+    packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE.txt'
@@ -36,27 +36,30 @@ android {
         exclude 'META-INF/NOTICE.txt'
         exclude 'META-INF/notice.txt'
         exclude 'META-INF/ASL2.0'
-      }
-}
-
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
-    compile group: 'org.bytedeco', name: 'javacv-platform', version: '1.4.4'
-
-    compile group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: '4.0.1-1.4.4',classifier: 'android-arm'
-    compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '4.1-1.4.4',classifier: 'android-arm'
-    compile group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: '4.0.1-1.4.4',classifier: 'android-x86'
-    compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '4.1-1.4.4',classifier: 'android-x86'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    compile group: 'com.google.guava', name: 'guava', version: '24.1-jre'
-    compile('com.googlecode.json-simple:json-simple:1.1.1') {
-        exclude group: 'org.hamcrest', module: 'hamcrest-core'
     }
-    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2'
+    productFlavors {
 
-    compile group: 'commons-codec', name: 'commons-codec', version: '1.13'
-    implementation 'one.util:streamex:0.7.0'
+    }
+
+    dependencies {
+        implementation fileTree(dir: 'libs', include: ['*.jar'])
+        implementation 'androidx.appcompat:appcompat:1.1.0'
+        implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+        compile 'org.bytedeco:javacv:+'
+
+        compile group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: '4.0.1-1.4.4', classifier: 'android-arm'
+        compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '4.1-1.4.4', classifier: 'android-arm'
+        compile group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: '4.0.1-1.4.4', classifier: 'android-x86'
+        compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '4.1-1.4.4', classifier: 'android-x86'
+        compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+        compile group: 'com.google.guava', name: 'guava', version: '24.1-jre'
+        compile('com.googlecode.json-simple:json-simple:1.1.1') {
+            exclude group: 'org.hamcrest', module: 'hamcrest-core'
+        }
+        compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2'
+
+        compile group: 'commons-codec', name: 'commons-codec', version: '1.13'
+        implementation 'one.util:streamex:0.7.0'
+    }
 }
