--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ android {
         compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '4.1-1.4.4', classifier: 'android-arm'
         compile group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: '4.0.1-1.4.4', classifier: 'android-x86'
         compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '4.1-1.4.4', classifier: 'android-x86'
+        compile group: 'org.bytedeco.javacpp-presets', name: 'opencv', version: '4.0.1-1.4.4', classifier: 'android-arm64'
+        compile group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '4.1-1.4.4', classifier: 'android-arm64'
         compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
         compile group: 'com.google.guava', name: 'guava', version: '24.1-jre'
         compile('com.googlecode.json-simple:json-simple:1.1.1') {
